# ares-mcp-server

./: .env.example  .gitattributes  .gitignore  BUILD_AND_INSTALL.md  CHANGELOG.md  MANIFEST.in  PUBLISHING.md  README.md  install-global.sh  pyproject.toml  requirements.txt  run.bat  run.sh  show-claude-config.sh
ares_mcp_server/: __init__.py  api_client.py  server.py  tools.py
examples/: usage_example.py
tests/: test_api_client.py
workflows/: publish.yml  test.yml
