[project]
name = "ares-mcp-server"
version = "0.3.2"
description = "MCP server for Czech ARES (Administrative Registry of Economic Subjects) API v3"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    { name = "ARES MCP Server", email = "contact@example.com" }
]
keywords = ["mcp", "ares", "czech", "business", "registry", "api", "economic-subjects"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/vzeman/ares-mcp-server"
"Bug Tracker" = "https://github.com/vzeman/ares-mcp-server/issues"
"Documentation" = "https://github.com/vzeman/ares-mcp-server#readme"
"Source Code" = "https://github.com/vzeman/ares-mcp-server"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.0.0",
    "types-python-dotenv>=1.0.0",
]

[project.scripts]
ares-mcp-server = "ares_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"